force-app/main/default/objects/cpm__Bank_Feed_Authorization__c/cpm__Bank_Feed_Authorization__c.object-meta.xml
<CustomObject>
    <label>Bank Feed Authorization</label>
    <nameField>
        <label>Bank Feed Authorization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Feed Authorizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>