force-app/main/default/objects/cpm__Bank_Feed_Authorization__c/fields/cpm__Authorization_Date__c.field-meta.xml
<CustomField>
    <fullName>cpm__Authorization_Date__c</fullName>
    <description>The date this authorization was given.</description>
    <label>Authorization Date</label>
    <type>DateTime</type>
</CustomField>