force-app/main/default/objects/cpm__Bank_Feed_Authorization__c/fields/cpm__Authorization_Reference__c.field-meta.xml
<CustomField>
    <fullName>cpm__Authorization_Reference__c</fullName>
    <description>The reference of the authorization. Used to communicate about this authorization with the AISP.</description>
    <label>Authorization Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>