force-app/main/default/objects/cpm__Bank_Feed_Authorization__c/fields/cpm__Consent_Id__c.field-meta.xml
<CustomField>
    <fullName>cpm__Consent_Id__c</fullName>
    <description>The id of the consent given by the user. Used to communicate about the agreement with the AISP.</description>
    <label>Consent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>