force-app/main/default/objects/cpm__Bank_Feed_Authorization__c/fields/cpm__Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>cpm__Expiry_Date__c</fullName>
    <description>The date this authorization expires.</description>
    <label>Expiry Date</label>
    <type>DateTime</type>
</CustomField>