force-app/main/default/objects/cpm__Bank_Feed_Authorization__c/fields/cpm__Institution_Name__c.field-meta.xml
<CustomField>
    <fullName>cpm__Institution_Name__c</fullName>
    <description>The name of the institution as provided by the AISP.</description>
    <label>Institution Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>