force-app/main/default/objects/cpm__Bank_Feed_Authorization__c/fields/cpm__Scope__c.field-meta.xml
<CustomField>
    <fullName>cpm__Scope__c</fullName>
    <description>The access scope this authorization provides. E.g. Transactions, Balances</description>
    <label>Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>