force-app/main/default/objects/cpm__Bank_Feed_Authorization__c/fields/cpm__Status__c.field-meta.xml
<CustomField>
    <fullName>cpm__Status__c</fullName>
    <description>The status of the authorization.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>Disconnected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>