force-app/main/default/objects/cpm__Bank_Feed_Authorization__c/fields/cpm__Valid_for__c.field-meta.xml
<CustomField>
    <fullName>cpm__Valid_for__c</fullName>
    <description>The amount of days this authorization is valid for. Provided by the AISP, used to calculate the Expiry_Date__c.</description>
    <label>Valid for</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>