force-app/main/default/objects/cpm__Bank_Feed_Authorization__c/recordTypes/cpm__GoCardless.recordType-meta.xml
<RecordType>
    <fullName>cpm__GoCardless</fullName>
    <active>true</active>
    <description>RecordType to be used with GoCardless AISP</description>
    <label>GoCardless</label>
</RecordType>